--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,10 @@
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
-                            This is some text within a card block.
+
+                            <!-- Pantallas de las rutas -->
+                            <router-outlet></router-outlet>
+
                         </div>
                     </div>
                 </div>
