--- a/src/app/components/increments/increments.component.html
+++ b/src/app/components/increments/increments.component.html
@@ -1,13 +1,13 @@
 <div class="input-group">
     <span class="input-group-btn">
-<button class="btn btn-primary" type="button" (click)="changeValue(-5)">
-<i class="fa fa-minus"></i>
-</button>
-</span>
-    <input type="number" class="form-control" placeholder="Progreso" [(ngModel)]='progress'>
+    <button [ngClass]="btnClass" type="button" (click)="changeValue(-5)">
+      <i class="fa fa-minus"></i>
+    </button>
+  </span>
+    <input type="number" class="form-control" [ngClass]="{'is-invalid': this.progress > 100 || this.progress < 0 }" min=0; max=100; placeholder="Progreso" [(ngModel)]='progress' (ngModelChange)=onChange($event)>
     <span class="input-group-btn">
-<button class="btn btn-primary" type="button" (click)="changeValue(5)">
-<i class="fa fa-plus"></i>
-</button>
-</span>
+    <button [ngClass]="btnClass" type="button" (click)="changeValue(5)">
+      <i class="fa fa-plus"></i>
+    </button>
+  </span>
 </div>
