--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -31,7 +31,7 @@
                     </a>
                     <ul aria-expanded="false" class="collapse">
                         <li *ngFor="let submenu of item.submenu">
-                            <a href="{{ submenu.url }}">{{ submenu.titulo }} </a>
+                            <a routerLink="{{ submenu.url }}"> {{ submenu.titulo }} </a>
                         </li>
                     </ul>
                 </li>
