--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -174,7 +174,7 @@
                             <li><a routerLink="/dashboard/account-settings"><i class="ti-settings"></i> Account Setting</a></li>
                             <li role="separator" class="divider"></li>
                             <li>
-                                <a routerLink="/login">
+                                <a (click)="logout()" class="logout">
                                     <i class="fa fa-power-off"></i> Logout
                                 </a>
                             </li>
@@ -185,6 +185,3 @@
         </div>
     </nav>
 </header>
-<!-- ============================================================== -->
-<!-- End Topbar header -->
-<!-- ============================================================== -->
