--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
-#themecolors .selector {
+#themecolors .selector,
+.logout {
     cursor: pointer;
+}
+
+.google-btn {
+    display: flex;
+    justify-content: center;
 }
