--- a/src/app/components/dona/dona.component.html
+++ b/src/app/components/dona/dona.component.html
@@ -4,8 +4,9 @@
         <h2>{{ title }}</h2>
 
         <div style="display: block">
-            <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [colors]="colors" [chartType]="doughnutChartType">
-      </canvas>
+            <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [colors]="colors"
+                [chartType]="doughnutChartType">
+            </canvas>
         </div>
 
     </div>
