--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -118,8 +118,8 @@ File: scss
         }
     }
     .profile-pic {
-        width: 30px;
-        border-radius: 100%;
+        width: 60px;
+        border-radius: 10px;
     }
     .dropdown-menu {
         box-shadow: 0 3px 12px rgba(0, 0, 0, 0.05);
