--- a/src/assets/css/pages/pages.css
+++ b/src/assets/css/pages/pages.css
@@ -104,8 +104,8 @@ File: scss
     .topbar .top-navbar .navbar-nav > .nav-item.show {
       background: rgba(0, 0, 0, 0.05); }
   .topbar .profile-pic {
-    width: 30px;
-    border-radius: 100%; }
+    width: 60px;
+    border-radius: 10px; }
   .topbar .dropdown-menu {
     box-shadow: 0 3px 12px rgba(0, 0, 0, 0.05);
     -webkit-box-shadow: 0 3px 12px rgba(0, 0, 0, 0.05);
