--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -18,13 +18,12 @@
                         <label for="email">Email</label>
                         <div class="input-group">
                             <div class="input-group-addon"><i class="ti-user"></i></div>
-                            <input type="text" class="form-control" id="email" placeholder="Email usuario"
-                                formControlName="email">
+                            <input type="email" class="form-control" id="email" placeholder="Email usuario"
+                                formControlName="email" [readonly]="usuario.google">
                         </div>
                     </div>
                     <button type="submit" class="btn btn-success btn-block waves-effect waves-light m-r-10"
-                        [disabled]="perfilForm?.invalid"
-                    >
+                        [disabled]="perfilForm?.invalid">
                         <i class="fa fa-save"></i>
                         Guardar cambiar
                     </button>
@@ -38,19 +37,16 @@
             <div class="card-body">
                 <h4 class="card-title">Avatar</h4>
                 <h6 class="card-subtitle">Imagen del usuario</h6>
-                
+
                 <div class="text-center">
-                    <img *ngIf="!imgTemp"  [src]="usuario.imageUrl" class="img-avatar">
+                    <img *ngIf="!imgTemp" [src]="usuario.imageUrl" class="img-avatar">
                     <img *ngIf="imgTemp" [src]="imgTemp" class="img-avatar">
                 </div>
 
                 <input type="file" (change)="changeImage($event)" />
                 <div class="mt-3">
-                    <button type="button" 
-                        class="btn btn-success btn-block waves-effect waves-light m-r-10" 
-                        [disabled]="!imageUpload"
-                        (click) = "uploadImage()"
-                        >
+                    <button type="button" class="btn btn-success btn-block waves-effect waves-light m-r-10"
+                        [disabled]="!imageUpload" (click)="uploadImage()">
                         <i class="fa fa-save"></i>
                         Cambiar imagen
                     </button>
