add new component hospitals and create CRUD, and service of search

--- a/src/app/pages/mantenimientos/hospitales/hospitales.component.html
+++ b/src/app/pages/mantenimientos/hospitales/hospitales.component.html
@@ -1,1 +1,84 @@
-<p>hospitales works!</p>
+<div class="row animated fadeIn">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <input type="text" class="form-control" placeholder="Buscar hospitales..." #txtSearch
+                    (keyup)="searchHospital(txtSearch.value)" />
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row" *ngIf="cargando">
+    <div class="col-12">
+        <div class="aler alert-info text-center">
+            <h4 class="alert-heading">Cargando</h4>
+            <i class="fa fa-spin fa-refresh fa-2x"></i>
+            <p class="mb-0">Por favor espere</p>
+        </div>
+    </div>
+</div>
+
+<div class="col-12" *ngIf="!cargando">
+    <div class="card">
+        <div class="card-body">
+
+            <div class="row">
+                <div class="col-8">
+                    <h4 class="card-title">Hospitales {{ hospitales.length }} </h4>
+                    <h6 class="card-subtitle">Hospitales registrado en la aplicación</h6>
+                </div>
+
+                <div class="col">
+                    <div class="text-right">
+                        <button class="btn btn-primary" (click)="crearHospital()">
+                            <i class="fa fa-hospital-o"></i>
+                            Crear Hospital
+                        </button>
+                    </div>
+                </div>
+
+
+            </div>
+
+            <div class="table-responsive">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Foto</th>
+                            <th>Nombre</th>
+                            <th class="text-nowrap">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let hospital of hospitales">
+                            <td class="text-center">
+                                <img [src]="hospital.img! | imagen:'hospitales' " [alt]="hospital.nombre"
+                                    class="avatar cursor" (click)="abrirModal(hospital)" />
+                            </td>
+                            <td>
+                                <input type="text" class="form-control" placeholder="Nombre del hospital"
+                                    [(ngModel)]="hospital.nombre" />
+                            </td>
+                            <td class="text-nowrap text-center w100">
+                                <a (click)="guardarCambios(hospital)" class="cursor" data-togle="tooltip"
+                                    data-original-title="Guardar cambios">
+                                    <i class="fa fa-pencil text-inverse"></i>
+                                </a>
+                                &nbsp;
+                                <a (click)="eliminarHospital(hospital)" class="cursor" data-togle="tooltip"
+                                    data-original-title="Borrar hospital">
+                                    <i class="fa fa-close text-danger"></i>
+                                </a>
+                            </td>
+
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <button class="btn btn-secondary">Anterior</button>
+            &nbsp;
+            <button class="btn btn-secondary">Siguientes</button>
+        </div>
+    </div>
+</div>
