--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,14 @@
     width: 150px;
 }
 
+.w200 {
+    width: 200px;
+}
+
+.br10{
+    border-radius: 10px;
+}
+
 .avatar {
     width: 40px;
     height: 40px;
